--- a/math/latex_macros_calibrating_LSMs.tex
+++ b/math/latex_macros_calibrating_LSMs.tex
@@ -63,6 +63,22 @@
 \newcommand{\fracRespiration}{\gamma}
 \newcommand{\LAI}{\textrm{LAI}}
 
+%
+% General land surface models (LSMs) 
+%
+
+\newcommand{\Npft}{N_{\textrm{pft}}}
+
+
+
+%
+% Spatial models. 
+%
+
+\newcommand{\spaceIdx}{s}
+\newcommand{\indexSpace}[2][\spaceIdx]{{#2}_{#1}}
+\newcommand{\stateInitSpace}[1][\spaceIdx]{\state_{0,\spaceIdx}}
+
 
 % --------------------------------------------------------------------------------------------------
 % Inverse problems: general setup 
